# parallel-bfs

./: CMakeLists.txt  README.md  bench_results.txt  build_and_run_tests.sh
src/: bfs.cpp  bfs.h
src/test/: test_correct.cpp  test_time.cpp  utils.cpp  utils.h
